--- a/index.html
+++ b/index.html
@@ -31,20 +31,47 @@
         <a href="#home">Home</a>
         <a href="#about">Tentang kami</a>
         <a href="#menu">Menu</a>
+        <a href="#products">Produk</a>
         <a href="#contact">kontak</a>
       </div>
 
       <div class="navbar-extra">
         <a href="#" id="search-button"><i data-feather="search"></i></a>
-        <a href="#" id="shopping-cart"><i data-feather="shopping-cart"></i></a>
+        <a href="#" id="shopping-cart-button"
+          ><i data-feather="shopping-cart"></i
+        ></a>
         <a href="#" id="hamburger-menu"><i data-feather="menu"></i></a>
+      </div>
+
+      <!-- search form start -->
+      <div class="search-form">
+        <input type="search" id="search-box" placeholder="search here..." />
+        <label for="search-box"><i data-feather="search"></i> </label>
+      </div>
+      <!-- search form end -->
+
+      <!-- shopping cart start -->
+      <div class="shopping-cart">
+        <div class="cart-item">
+          <img src="produk/pupuk.jpg" alt="product 1" />
+          <div class="item-detail">
+            <h3>product 1</h3>
+            <div class="item-price">IDR 30K</div>
+          </div>
+          <div>
+            <i data-feather="trash-2" class="remove-item"></i>
+          </div>
+        </div>
+      </div>
+      <!-- shopping cart end -->
     </nav>
     <!-- Navbar end -->
+
     <!-- hero setion start -->
     <section class="hero" id="home">
       <main class="content">
-        <h1> Mari Berbelanja <span>Disini</span></h1>
-        <p> murah meriah dijamin pas dikantong</p>
+        <h1>Mari Berbelanja <span>Disini</span></h1>
+        <p>murah meriah dijamin pas dikantong</p>
         <a href="#" class="cta">Beli sekarang</a>
       </main>
     </section>
@@ -52,54 +79,57 @@
 
     <!-- about section start -->
     <section id="about" class="about">
-      <h2><span>Tentang  </span>kami</h2>
+      <h2><span>Tentang </span>kami</h2>
 
       <div class="row">
         <div class="about-img">
-         <img src="img/tentang-kami.jpg" alt="tentang kami">
+          <img src="img/tentang-kami.jpg" alt="tentang kami" />
         </div>
-      
-       <div class="content">
-        <h3>Konsep dimazstore</h3>
-        <p>kami memiliki prinsip dimana layaknya padi semakin berisi semakin tunduk yang mengartikan bahwa,
-           jika perusahaan kami mengalami peningkatan kami akan melakukan event tertentu didalamnya</p>
-       </div>
+
+        <div class="content">
+          <h3>Konsep dimazstore</h3>
+          <p>
+            kami memiliki prinsip dimana layaknya padi semakin berisi semakin
+            tunduk yang mengartikan bahwa, jika perusahaan kami mengalami
+            peningkatan kami akan melakukan event tertentu didalamnya
+          </p>
+        </div>
       </div>
     </section>
     <!-- about section end -->
-   
+
     <!-- menu section start -->
-    <section id="menu" class="menu"> 
+    <section id="menu" class="menu">
       <h2><span>Menu</span> kami</h2>
       <p>beberapa bahan baku yang populer dan harga yang terjangkau</p>
       <div class="row">
         <div class="menu-card">
-          <img src="img/egg.jpg" alt="egg">
+          <img src="img/egg.jpg" alt="egg" />
           <h3 class="menu-card-title">-telur</h3>
           <p class="menu-card-price">IDR 1,9K - 2K</p>
         </div>
         <div class="menu-card">
-          <img src="img/egg.jpg" alt="egg">
+          <img src="img/egg.jpg" alt="egg" />
           <h3 class="menu-card-title">-telur</h3>
           <p class="menu-card-price">IDR 1,9K - 2K</p>
         </div>
         <div class="menu-card">
-          <img src="img/egg.jpg" alt="egg">
+          <img src="img/egg.jpg" alt="egg" />
           <h3 class="menu-card-title">-telur</h3>
           <p class="menu-card-price">IDR 1,9K - 2K</p>
         </div>
         <div class="menu-card">
-          <img src="img/egg.jpg" alt="egg">
+          <img src="img/egg.jpg" alt="egg" />
           <h3 class="menu-card-title">-telur</h3>
           <p class="menu-card-price">IDR 1,9K - 2K</p>
         </div>
         <div class="menu-card">
-          <img src="img/egg.jpg" alt="egg">
+          <img src="img/egg.jpg" alt="egg" />
           <h3 class="menu-card-title">-telur</h3>
           <p class="menu-card-price">IDR 1,9K - 2K</p>
         </div>
         <div class="menu-card">
-          <img src="img/egg.jpg" alt="egg">
+          <img src="img/egg.jpg" alt="egg" />
           <h3 class="menu-card-title">-telur</h3>
           <p class="menu-card-price">IDR 1,9K - 2K</p>
         </div>
@@ -107,25 +137,113 @@
     </section>
     <!-- menu section end -->
 
+    <!-- products section start-->
+    <section class="products" id="products">
+      <h2><span>Produk unggulan</span> kami</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum optio,
+        assumenda laudantium blanditiis tempore doloremque.
+      </p>
+
+      <div class="row">
+        <div class="product-card">
+          <div class="product-icons">
+            <a href="#"><i data-feather="shopping-cart"></i></a>
+            <a href="#" class="eye-button"><i data-feather="eye"></i></a>
+          </div>
+
+          <div class="product-image">
+            <img src="produk/pupuk.jpg" alt="product 1" />
+          </div>
+
+          <div class="product-content">
+            <h3>pupuk garden</h3>
+            <div class="product-stars">
+              <i data data-feather="star" class="star"></i>
+              <i data data-feather="star" class="star"></i>
+              <i data data-feather="star" class="star"></i>
+              <i data data-feather="star" class="star"></i>
+              <i data data-feather="star"></i>
+            </div>
+          </div>
+
+          <div class="product-price">IDR 30k <span>55k</span></div>
+        </div>
+        <div class="product-card">
+          <div class="product-icons">
+            <a href="#"><i data-feather="shopping-cart"></i></a>
+            <a href="#" class="eye-button"><i data-feather="eye"></i></a>
+          </div>
+
+          <div class="product-image">
+            <img src="produk/pupuk.jpg" alt="product 1" />
+          </div>
+
+          <div class="product-content">
+            <h3>pupuk garden</h3>
+            <div class="product-stars">
+              <i data data-feather="star" class="star"></i>
+              <i data data-feather="star" class="star"></i>
+              <i data data-feather="star" class="star"></i>
+              <i data data-feather="star" class="star"></i>
+              <i data data-feather="star"></i>
+            </div>
+          </div>
+
+          <div class="product-price">IDR 30k <span>55k</span></div>
+        </div>
+        <div class="product-card">
+          <div class="product-icons">
+            <a href="#"><i data-feather="shopping-cart"></i></a>
+            <a href="#" class="eye-button"><i data-feather="eye"></i></a>
+          </div>
+
+          <div class="product-image">
+            <img src="produk/pupuk.jpg" alt="product 1" />
+          </div>
+
+          <div class="product-content">
+            <h3>pupuk garden</h3>
+            <div class="product-stars">
+              <i data data-feather="star" class="star"></i>
+              <i data data-feather="star" class="star"></i>
+              <i data data-feather="star" class="star"></i>
+              <i data data-feather="star" class="star"></i>
+              <i data data-feather="star"></i>
+            </div>
+          </div>
+
+          <div class="product-price">IDR 30k <span>55k</span></div>
+        </div>
+      </div>
+    </section>
+    <!-- products section end-->
+
     <!-- contact section start -->
     <section id="contact" class="contact">
       <h2><span>kontak</span> kami</h2>
       <p>hubungi kami lebih lanjut di sini</p>
-   
+
       <div class="row">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31853.379778273993!2d98.70004406721407!3d3.661871839157606!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x303133d008e140e3%3A0xace813adc8b8e042!2sKaWan%20Cofee%20Resto!5e0!3m2!1sen!2sid!4v1688636027848!5m2!1sen!2sid" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="map"></iframe>
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31853.379778273993!2d98.70004406721407!3d3.661871839157606!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x303133d008e140e3%3A0xace813adc8b8e042!2sKaWan%20Cofee%20Resto!5e0!3m2!1sen!2sid!4v1688636027848!5m2!1sen!2sid"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
+          class="map"
+        ></iframe>
         <form action="">
           <div class="input-group">
             <i data-feather="user"></i>
-            <input type="text" placeholder="nama">
+            <input type="text" placeholder="nama" />
           </div>
           <div class="input-group">
             <i data-feather="mail"></i>
-            <input type="text" placeholder="email">
+            <input type="text" placeholder="email" />
           </div>
           <div class="input-group">
             <i data-feather="phone"></i>
-            <input type="text" placeholder="no-hp">
+            <input type="text" placeholder="no-hp" />
           </div>
           <button type="submit" class="btn">kirim pesan</button>
         </form>
@@ -138,10 +256,12 @@
       <div class="social-media">
         <a href="#"><i data-feather="facebook"></i></a>
         <a href="#"><i data-feather="twitter"></i></a>
-        <a href="https://www.instagram.com/noufal.03/"><i data-feather="instagram"></i></a>
+        <a href="https://www.instagram.com/noufal.03/"
+          ><i data-feather="instagram"></i
+        ></a>
       </div>
 
-      <div class="links"> 
+      <div class="links">
         <a href="#home">Home</a>
         <a href="#about">Tentang kami</a>
         <a href="#menu">Menu</a>
@@ -149,19 +269,48 @@
       </div>
 
       <div class="credit">
-        <p>created by <a href="">nopal sudanta adw bin irwanto</a>. I &copy; 2023</p>
+        <p>
+          created by <a href="">nopal sudanta adw bin irwanto</a>. I &copy; 2023
+        </p>
       </div>
     </footer>
 
     <!--footer end -->
 
-    
+    <!-- modal bo item deatail start-->
+    <div class="modal" id="item-detail-modal">
+      <div class="modal-container">
+        <a href="#" class="close-icon"><i data-feather="x-circle"></i></a>
+        <div class="modal-content">
+          <img src="produk/pupuk.jpg" alt="product 1" />
+          <div class="product-content">
+            <h3>product 1</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti
+              tenetur pariatur, suscipit adipisci ad velit repudiandae, totam
+              officia id corporis eius at neque? Deleniti, dicta.
+            </p>
+            <h3>pupuk garden</h3>
+            <div class="product-stars">
+              <i data data-feather="star" class="star"></i>
+              <i data data-feather="star" class="star"></i>
+              <i data data-feather="star" class="star"></i>
+              <i data data-feather="star" class="star"></i>
+              <i data data-feather="star"></i>
+            </div> 
+            <a href="#"><i data-feather="shopping-cart"></i> <span>add to cart</span></a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- modal bo item deatail end-->
+
     <!-- feather icon -->
     <script>
       feather.replace();
     </script>
 
-   <!-- my java script -->
+    <!-- my java script -->
     <script src="js/script.js"></script>
   </body>
 </html>
